kubernetes/gcp/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  selector:
    matchLabels:
      app: frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: registry.hub.docker.com/flolu/cents-ideas_frontend:0.3.2
          readinessProbe:
            httpGet:
              path: /
              port: 4000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 4000
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            requests:
              memory: 100Mi
              cpu: 200m
            limits:
              memory: 500Mi
              cpu: 500m

---
apiVersion: v1
kind: Service
metadata:
  name: cents-ideas-frontend
spec:
  type: NodePort
  selector:
    app: frontend
  ports:
    - name: http
      port: 80
      targetPort: 4000
      nodePort: 30001
