kubernetes/gcp/gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
spec:
  selector:
    matchLabels:
      app: gateway
  replicas: 1
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
        - name: gateway
          image: registry.hub.docker.com/flolu/cents-ideas_gateway:0.3.1
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            # // TODO remove limits?!
            limits:
              memory: "256Mi"
              cpu: "200m"

---
apiVersion: v1
kind: Service
metadata:
  name: cents-ideas-gateway
spec:
  type: NodePort
  selector:
    app: gateway
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      nodePort: 30000
